fixed h2 styles; shifted from manual katex to automatic; fixed popular blog styles; made the views++ on authed user request only;

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,11 +24,16 @@
     list-style-type: square;
   }
   .blog-view-div h2 {
-    @apply text-3xl mt-7 mb-3 hover:dark:text-pink-300 hover:text-pink-700;
+    @apply text-3xl mt-7 mb-3 hover:dark:text-pink-300 hover:text-pink-700 cursor-pointer;
   }
   .blog-view-div h1 {
     @apply text-5xl mt-7 mb-3 hover:dark:text-pink-300 hover:text-pink-700;
   }
+
+  .blog-view-div h2:hover:before {
+	content: '# ';
+  }
+
   .blog-view-div li {
     @apply text-lg;
   }
@@ -42,7 +47,7 @@
   }
   .blog-view-div .hljs-tag,
   .blog-view-div .hljs-name {
-    @apply dark:text-pink-100 text-pink-900;
+    @apply dark:text-pink-400 text-pink-600;
   }
   .blog-view-div .hljs-attr {
     @apply dark:text-slate-300 text-slate-700;
